--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,10 @@
     <div>
      
     <nav>
-      <p><a href="/">Cloud Poll</a></p>
-      <p class="navbar"><a href="/signup">Sign Up</a></p>
+      <div class="navbar">
+        <p class="navbar-left"><a href="/">Cloud Poll</a></p>
+        <p class="navbar-right"><a href="/signup">Sign Up</a></p>
+      </div>
     </nav>
     
     <div id="top-header" class="container">    
