--- a/public/poll-vault.html
+++ b/public/poll-vault.html
@@ -11,8 +11,10 @@
    <div>
      
     <nav>
-      <p><a href="/">Cloud Poll</a></p>
-      <p class="navbar"><a href="/">Sign In</a> | <a href="/signup">Sign Up</a></p>
+      <div class="navbar">
+        <p calss="navbar-left"><a href="/">Cloud Poll</a></p>
+        <p class="navbar-right"><a href="/">Sign In</a> | <a href="/signup">Sign Up</a></p>
+      </div>
     </nav>
     
     <div id="vault-header" class="container"> 
