updated /routes/index and /controllers/clickHandler.js

--- a/public/signup.html
+++ b/public/signup.html
@@ -41,6 +41,7 @@
           <label>Confirm Password:</label><br>
           <input class="input" title="Please confirm your password" type="password" name="confirm" required size="32"><br>
           <button id ="register" type="submit" value="Sign Up"><p>Sign Up</p></button>
+          <p><!--INTENTIONAL BLANK SPACE--></p>
         </form>
         <!--<p id="signupResponse"><em></em></p>-->
       </main>
